<resources>
    <string name="app_name">TicTacToe</string>
    <string name="author">By: Blaine Anderson</string>
    <string name="action_settings">Quit Game</string>
    <string name="welcome">Welcome to Tic Tac Toe!</string>
    <string name="start">Start New Game</string>
    <string name="start_game">Start Game</string>
    <string name="player1">Player 1 name (X):</string>
    <string name="player2">Player 2 name (O):</string>
    <string name="row_number">How many rows would you like?</string>
    <string name="play_again">Play Again</string>
    <string name="end_game">End Game</string>
    <string name="game_over">Game Over!</string>
    <string name="ok">Okay</string>
    <string name="draw">Cat\'s Game</string>
    <string name="cancel">Cancel</string>
    <string name="end_game_message">Game is over! Would you like to play again?</string>
    <string name="quit_message">Are you sure you want to quit the game?</string>
</resources>
