<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:layout_margin="24dp"
    >



    <TextView
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/player1"/>

    <EditText
        android:id="@+id/player1_name"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/name_label2"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_below="@+id/player1_name"
        android:text="@string/player2"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/player2_name"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_label2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/row_label"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_marginTop="25sp"
        android:layout_below="@id/player2_name"
        android:text="@string/row_number"/>

    <EditText
        android:id="@+id/num_rows"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:inputType="phone"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/start_game"
        android:background="@color/colorPrimary"
        android:textColor="@color/backgroundColor"
        android:text="@string/start_game"
        android:layout_below="@id/num_rows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>


</RelativeLayout>