<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.blaine.tictactoe.fragments.MainActivityFragment"
    tools:showIn="@layout/activity_main">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/welcome"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:id="@+id/textView"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="69dp"
            android:layout_marginEnd="69dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="74dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_marginTop="35dp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@id/textView"
            app:layout_constraintRight_toRightOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="0dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/backgroundColor"
            android:layout_height="wrap_content"
            android:text="@string/start"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="117dp"
            app:layout_constraintLeft_toLeftOf="parent" />



        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="367dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            app:layout_constraintGuide_begin="74dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />


</android.support.constraint.ConstraintLayout>
